[package]
name = "timecalc-rs"
version = "0.3.0"
edition = "2021"
authors = ["David Isaksson <davidisaksson93@gmail.com>"]

[[bin]]
name = "timecalc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.10"
thiserror = "1.0"
