[package]
name = "timecalc"
version = "0.4.11"
edition = "2021"
authors = ["David Isaksson <davidisaksson93@gmail.com>"]
license = "MIT"
description = "Calculate the total duration of a given set of intervals and durations"
repository = "https://github.com/granddave/timecalc-rs/"
keywords = ["cli", "parser", "utility", "time", "time-tracking"]
categories = ["command-line-interface", "command-line-utilities", "date-and-time", "parsing"]

[lib]
name = "timecalc"
path = "src/lib.rs"

[[bin]]
name = "timecalc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo"] }
lazy_static = "1"
regex = "1"
thiserror = "2"
